tests/errors/arguments/variables/invalid_char_08.src
.IPPcode18
defvar @\var